chore: Add "noEmit" flag to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "strict": true,
     "lib": ["esnext"],
+    "noEmit": true,
     "types": [
       "@cloudflare/workers-types",
       "vitest/globals",
