chore: Add test dependabot group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,7 @@ updates:
           - "@typescript-eslint/*"
           - "eslint*"
           - "prettier"
+      test:
+        patterns:
+          - "@vitest/*"
+          - "vitest*"
