--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "wrangler dev src/index.ts --port 7070",
     "deploy": "wrangler deploy --minify src/index.ts --keep-vars",
-    "create-token": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/createToken.ts",
+    "create-token": "inialum-token-generator --service-name inialum-mail-service --env-file ./.dev.vars",
     "lint": "pnpm run lint:check && pnpm run format:check",
     "lint:check": "eslint --cache \"**/*.{js,jsx,ts,tsx}\" --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --cache \"**/*.{js,jsx,ts,tsx}\" --ignore-path .gitignore .",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240329.0",
     "@inialum/eslint-config": "^1.1.2",
-    "@types/jws": "^3.2.9",
+    "@inialum/token-generator": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "@vitest/coverage-v8": "^1.4.0",
