--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "streetsidesoftware.code-spell-checker",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "github.vscode-github-actions"
+    "github.vscode-github-actions",
+    "biomejs.biome"
   ]
 }
