chore: Update `deploy_production.yml` to set default working directory to app

--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -21,6 +21,9 @@ jobs:
     permissions:
       contents: read
       deployments: write
+    defaults:
+      run:
+        working-directory: app
 
     steps:
       - name: Checkout
