chore: Install `@changesets/cli`

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "inialum-error-notification-service",
+	"name": "app",
 	"type": "module",
 	"private": true,
 	"license": "Apache-2.0",
