--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
 		"test:ci": "pnpm --filter \"./app\" test:ci",
+		"changeset": "changeset",
 		"app": "pnpm --filter \"./app\"",
 		"sdk": "pnpm --filter \"./packages/sdk\""
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4"
-	}
+		"@biomejs/biome": "^1.9.4",
+		"@changesets/cli": "^2.27.9"
+	},
+	"packageManager": "pnpm@9.12.2+sha256.2ef6e547b0b07d841d605240dce4d635677831148cd30f6d564b8f4f928f73d2"
 }
