chore: Rename root package name to "monorepo"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@inialum/inialum-error-notification-service-monorepo",
+	"name": "monorepo",
 	"type": "module",
 	"private": true,
 	"license": "Apache-2.0",
