chore: Update `biome.json` formatter configuration to ignore generated type

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,8 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "tab",
+		"ignore": ["packages/javascript/src/types/generated/*.ts"]
 	},
 	"organizeImports": {
 		"enabled": true
