--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
     timeout-minutes: 3
     permissions:
       contents: read
+      pull-requests: write
 
     steps:
       - name: Checkout
