--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
 		"lint:fix": "biome check --write",
 		"test": "vitest",
 		"test:ci": "pnpm run test:coverage",
-		"test:coverage": "vitest run --coverage"
+		"test:coverage": "vitest run --coverage",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@hono/swagger-ui": "^0.4.1",
@@ -22,10 +23,10 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20241022.0",
 		"@inialum/token-generator": "^0.2.0",
-		"@vitest/coverage-v8": "^2.1.3",
+		"@vitest/coverage-v8": "^2.1.4",
 		"discord-api-types": "^0.37.103",
 		"typescript": "^5.6.3",
-		"vitest": "^2.1.3",
+		"vitest": "^2.1.4",
 		"vitest-environment-miniflare": "^2.14.4",
 		"wrangler": "^3.83.0"
 	}
