--- a/packages/javascript/package.json
+++ b/packages/javascript/package.json
@@ -23,7 +23,10 @@
 	"scripts": {
 		"build": "tsup",
 		"api:gen-schema": "openapi-typescript https://error-notification-api.inialum.org/schema/v1 -o ./src/types/generated/schema.d.ts",
-		"test": "vitest"
+		"test": "vitest",
+		"test:ci": "pnpm run test:coverage",
+		"test:coverage": "vitest run --coverage",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"openapi-fetch": "^0.13.0"
@@ -31,9 +34,10 @@
 	"devDependencies": {
 		"@tsconfig/recommended": "^1.0.8",
 		"@tsconfig/strictest": "^2.0.5",
+		"@vitest/coverage-v8": "^2.1.4",
 		"openapi-typescript": "^7.4.2",
 		"tsup": "^8.3.5",
 		"typescript": "^5.4.3",
-		"vitest": "^1.4.0"
+		"vitest": "^2.1.4"
 	}
 }
