--- a/examples/hono-middleware/package.json
+++ b/examples/hono-middleware/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "hono-middleware-example",
 	"scripts": {
-		"dev": "wrangler dev"
+		"dev": "wrangler dev",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"hono": "^4.6.7"
@@ -9,6 +10,7 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240925.0",
 		"@inialum/error-notification-service-hono-middleware": "workspace:^",
+		"typescript": "^5.6.3",
 		"wrangler": "^3.79.0"
 	}
 }
