--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"@changesets/changelog-github": "^0.5.0",
 		"@changesets/cli": "^2.27.9",
 		"turbo": "^2.2.3"
 	},
