--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,8 @@ jobs:
     timeout-minutes: 5
     if: github.repository == 'inialum/inialum-error-notification-service'
     permissions:
-      contents: read
-      deployments: write
+      contents: write
+      id-token: write
 
     steps:
       - name: Checkout
