chore: Update Turborepo config for `test:ci` script

--- a/turbo.json
+++ b/turbo.json
@@ -13,8 +13,8 @@
 			"persistent": true
 		},
 		"test:ci": {
-			"outputs": ["coverage/**"],
-			"dependsOn": []
+			"dependsOn": ["^build"],
+			"outputs": ["coverage/**"]
 		},
 		"clean": {
 			"cache": false
