chore: Update access level in `.changeset/config.json`

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,7 +12,7 @@
 			"@inialum/error-notification-service-hono-middleware"
 		]
 	],
-	"access": "restricted",
+	"access": "public",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
 	"ignore": ["app"]
