chore: Make it possible to run formatter when the Changesets update the version in the release CI

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 	},
 	"scripts": {
 		"build": "turbo build",
-		"clean": "turbo clean",
+		"format": "biome format",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
 		"test": "turbo test",
 		"test:ci": "turbo test:ci",
+		"clean": "turbo clean",
 		"changeset": "changeset",
 		"publish:ci": "pnpm publish -r",
 		"typecheck": "turbo typecheck",
