fix: Fix release CI

--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
 	},
 	"scripts": {
 		"build": "turbo build",
-		"format": "biome format",
 		"lint": "biome check",
 		"lint:fix": "biome check --write",
 		"test": "turbo test",
 		"test:ci": "turbo test:ci",
-		"clean": "turbo clean",
-		"changeset": "changeset",
-		"publish:ci": "pnpm publish -r",
 		"typecheck": "turbo typecheck",
+		"changeset": "changeset",
+		"version:ci": "changeset version && biome format",
+		"publish:ci": "pnpm publish -r",
+		"clean": "turbo clean",
 		"app": "pnpm --filter \"./app\"",
 		"package-js": "pnpm --filter \"./packages/javascript\"",
 		"package-hono": "pnpm --filter \"./packages/hono\""
