--- a/packages/hono/package.json
+++ b/packages/hono/package.json
@@ -2,7 +2,6 @@
 	"name": "@inialum/error-notification-service-hono-middleware",
 	"version": "0.1.0",
 	"description": "Hono middleware for inialum-error-notification-service",
-	"private": true,
 	"type": "module",
 	"author": {
 		"name": "INIALUM - INIAD Alumni Meetings",
@@ -14,6 +13,9 @@
 		"type": "git",
 		"url": "https://github.com/inialum/inialum-error-notification-service"
 	},
+	"publishConfig": {
+    "access": "public"
+  },
 	"engines": {
 		"node": ">=20.0.0"
 	},
