--- a/packages/javascript/package.json
+++ b/packages/javascript/package.json
@@ -2,7 +2,6 @@
 	"name": "@inialum/error-notification-service-javascript-sdk",
 	"version": "0.1.0",
 	"description": "JavaScript SDK for inialum-error-notification-service",
-	"private": true,
 	"type": "module",
 	"author": {
 		"name": "INIALUM - INIAD Alumni Meetings",
@@ -13,6 +12,9 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/inialum/inialum-error-notification-service"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"engines": {
 		"node": ">=20.0.0"
