chore: Enable GitHub releases in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
         uses: changesets/action@v1
         with:
           setupGitUser: false
+          createGithubReleases: true
           version: pnpm version:ci
           publish: pnpm publish:ci
         env:
