--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,17 +54,13 @@ jobs:
         with:
           node-version: 'lts/*'
           cache: 'pnpm'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
-      - name: Setup .npmrc
-        run: |
-          cat << EOF > "$HOME/.npmrc"
-            //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
-          EOF
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+
+      - name: Build packages
+        run: pnpm build
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
