--- a/examples/hono-middleware/package.json
+++ b/examples/hono-middleware/package.json
@@ -6,11 +6,11 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@inialum/error-notification-service-hono-middleware": "latest",
 		"hono": "^4.6.7"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240925.0",
-		"@inialum/error-notification-service-hono-middleware": "workspace:^",
 		"typescript": "^5.6.3",
 		"wrangler": "^3.79.0"
 	}
