--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,15 +5,7 @@
 		{ "repo": "inialum/inialum-error-notification-service" }
 	],
 	"commit": false,
-	"fixed": [],
-	"linked": [
-		[
-			"@inialum/error-notification-service-javascript-sdk",
-			"@inialum/error-notification-service-hono-middleware"
-		]
-	],
 	"access": "public",
 	"baseBranch": "main",
-	"updateInternalDependencies": "patch",
-	"ignore": ["app"]
+	"updateInternalDependencies": "patch"
 }
