--- a/packages/javascript/package.json
+++ b/packages/javascript/package.json
@@ -35,9 +35,10 @@
 		"openapi-fetch": "^0.13.0"
 	},
 	"devDependencies": {
-		"@tsconfig/recommended": "^1.0.8",
+		"@tsconfig/node-lts": "^20.1.3",
 		"@tsconfig/strictest": "^2.0.5",
 		"@vitest/coverage-v8": "^2.1.4",
+		"msw": "^2.6.0",
 		"openapi-typescript": "^7.4.2",
 		"tsup": "^8.3.5",
 		"typescript": "^5.4.3",
