--- a/packages/javascript/tsconfig.json
+++ b/packages/javascript/tsconfig.json
@@ -1,17 +1,14 @@
 {
 	"extends": [
-		"@tsconfig/recommended/tsconfig.json",
+		"@tsconfig/node-lts/tsconfig.json",
 		"@tsconfig/strictest/tsconfig.json"
 	],
 	"compilerOptions": {
+		"target": "ES2022",
 		"module": "esnext",
 		"moduleResolution": "Bundler",
 		"exactOptionalPropertyTypes": false,
-		"types": ["vitest/globals"],
-		"paths": {
-			"@/*": ["./src/*"],
-			"@Root/*": ["./*"]
-		}
+		"types": ["vitest/globals"]
 	},
 	"include": ["**/*.ts"],
 	"exclude": ["dist", "node_modules"]
