--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,6 @@
 	"commit": false,
 	"access": "public",
 	"baseBranch": "main",
-	"updateInternalDependencies": "patch"
+	"updateInternalDependencies": "patch",
+	"ignore": ["app", "examples/**"]
 }
