--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,5 +41,8 @@ jobs:
       - name: Run linter
         run: pnpm lint
 
+      - name: Run typecheck
+        run: pnpm typecheck
+
       - name: Run test
         run: pnpm test:ci
