--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@biomejs/biome": "^1.9.4",
 		"@changesets/changelog-github": "^0.5.0",
 		"@changesets/cli": "^2.27.9",
+		"@tsconfig/node-ts": "^23.6.0",
+		"@tsconfig/node22": "^22.0.0",
 		"turbo": "^2.4.4"
 	},
 	"packageManager": "pnpm@9.12.2+sha256.2ef6e547b0b07d841d605240dce4d635677831148cd30f6d564b8f4f928f73d2"
