--- a/packages/javascript/tsconfig.json
+++ b/packages/javascript/tsconfig.json
@@ -1,13 +1,6 @@
 {
-	"extends": [
-		"@tsconfig/node-lts/tsconfig.json",
-		"@tsconfig/strictest/tsconfig.json"
-	],
+	"extends": ["../../tsconfig.base.json"],
 	"compilerOptions": {
-		"target": "ES2022",
-		"module": "esnext",
-		"moduleResolution": "Bundler",
-		"exactOptionalPropertyTypes": false,
 		"types": ["vitest/globals"]
 	},
 	"include": ["**/*.ts"],
