--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
 	"type": "module",
 	"private": true,
 	"license": "Apache-2.0",
-	"engines": {
-		"node": ">=20.0.0"
-	},
 	"scripts": {
 		"build": "turbo build",
 		"lint": "biome check",
@@ -22,12 +19,12 @@
 		"package-hono": "pnpm --filter \"./packages/hono\""
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@changesets/changelog-github": "^0.5.1",
-		"@changesets/cli": "^2.28.1",
-		"@tsconfig/node-ts": "^23.6.0",
-		"@tsconfig/node22": "^22.0.0",
-		"turbo": "^2.4.4"
+		"@biomejs/biome": "2.3.8",
+		"@changesets/changelog-github": "^0.5.2",
+		"@changesets/cli": "^2.29.8",
+		"@tsconfig/node-ts": "^23.6.2",
+		"@tsconfig/node24": "^24.0.3",
+		"turbo": "^2.6.1"
 	},
-	"packageManager": "pnpm@9.12.2+sha256.2ef6e547b0b07d841d605240dce4d635677831148cd30f6d564b8f4f928f73d2"
+	"packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a"
 }
