--- a/packages/hono/package.json
+++ b/packages/hono/package.json
@@ -23,7 +23,10 @@
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"files": ["./dist/**/*.js", "./dist/**/*.d.ts"],
+	"files": [
+		"./dist/**/*.js",
+		"./dist/**/*.d.ts"
+	],
 	"scripts": {
 		"build": "tsup",
 		"test": "vitest",
@@ -38,10 +41,10 @@
 		"@inialum/error-notification-service-javascript-sdk": "workspace:^"
 	},
 	"devDependencies": {
-		"@vitest/coverage-v8": "^3.0.7",
-		"hono": "^4.6.8",
-		"tsup": "^8.4.0",
-		"typescript": "^5.8.2",
-		"vitest": "^3.0.7"
+		"@vitest/coverage-v8": "^4.0.14",
+		"hono": "^4.10.7",
+		"tsup": "^8.5.1",
+		"typescript": "^5.9.3",
+		"vitest": "^4.0.14"
 	}
 }
