--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,7 +7,7 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"lib": ["esnext"],
-		"types": ["vitest/globals", "vitest-environment-miniflare/globals"],
+		"types": ["vitest/globals"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "hono/jsx",
 		"baseUrl": ".",
