--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
 		"dev": "wrangler dev src/index.ts --port 7070",
 		"deploy": "wrangler deploy --minify src/index.ts --keep-vars",
 		"create-token": "inialum-token-generator --service-name inialum-error-notification-service --env-file ./.dev.vars",
+		"typegen": "wrangler types --env-interface CloudflareBindings",
 		"test": "vitest",
 		"test:ci": "pnpm run test:coverage",
 		"test:coverage": "vitest run --coverage",
