chore: Add `@tsconfig/vite-react` as a devDependency for JavaScript SDK

--- a/packages/javascript/package.json
+++ b/packages/javascript/package.json
@@ -39,6 +39,7 @@
 		"openapi-fetch": "^0.15.0"
 	},
 	"devDependencies": {
+		"@tsconfig/vite-react": "^7.0.2",
 		"@vitest/coverage-v8": "^4.0.14",
 		"msw": "^2.12.3",
 		"openapi-typescript": "^7.10.1",
