--- a/packages/javascript/tsconfig.json
+++ b/packages/javascript/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["../../tsconfig.base.json"],
+	"extends": ["../../tsconfig.base.json", "@tsconfig/vite-react/tsconfig.json"],
 	"compilerOptions": {
 		"types": ["vitest/globals"]
 	},
